@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Aug 17 22:40:04 2002 -->
+<!-- Mon Aug 19 11:29:08 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -113,7 +113,10 @@ Configuration
 <A HREF="config-client.html">Client Configuration</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<A HREF="config-filter.html">Filter Specification</A>
+<b>Filter Specification</b>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="filter-sources.html">Filter Sources</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
