@@ -5,3 +5,4 @@
 <li><a href="config-server.html">Server Configuration</a>
 <li><a href="config-client.html">Client Configuration</a>
 <li><a href="config-filter.html">Filter Specification</a>
+<li><a href="filter-sources.html">Filter Sources</a>
